--- a/talks/workshop/distributed-systems-challenges/index.html
+++ b/talks/workshop/distributed-systems-challenges/index.html
@@ -136,12 +136,28 @@
 
 
         <section>
-            <h2>{ <a href="https://4comprehension.com/">4comprehension.com</a> }</h2>
-            <h4>WarsawJUG | Vavr | Oracle ACE</h4>
-            <h4>Independent Consultant/Trainer</h4>
-            <small>distributed systems | microservices | async | reactive | java</small>
-            <h5><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
-            <br>
+            <h2 style="margin-bottom: 0.3em;">{ <a href="https://4comprehension.com/">4comprehension.com</a> }</h2>
+
+            <h4 style="margin: 0.5em 0; font-weight: 500;">
+                <span style="margin: 0 10px;">Java Champion</span>
+                <span style="color: #3aa0a0;">|</span>
+                <span style="margin: 0 10px;">Oracle ACE</span>
+            </h4>
+
+            <div style="color: #555; font-size: 0.6em; margin: 0.6em 0;">
+                <span style="margin: 0 8px;">WarsawJUG Leader</span>
+                <span style="color: #3aa0a0;">|</span>
+                <span style="margin: 0 8px;">Vavr Leader</span>
+            </div>
+
+            <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin: 1em 0;">
+                <span style="background: #f5f5f5; padding: 5px 12px; border-radius: 15px; font-size: 0.55em; color: #444;">distributed systems</span>
+                <span style="background: #f5f5f5; padding: 5px 12px; border-radius: 15px; font-size: 0.55em; color: #444;">microservices</span>
+                <span style="background: #f5f5f5; padding: 5px 12px; border-radius: 15px; font-size: 0.55em; color: #444;">reactive</span>
+                <span style="background: #f5f5f5; padding: 5px 12px; border-radius: 15px; font-size: 0.55em; color: #444;">java</span>
+            </div>
+
+            <h5 style="margin-top: 1em;"><a href="https://twitter.com/pivovarit">@pivovarit</a></h5>
         </section>
 
         <section>
