--- a/scrabble/index.html
+++ b/scrabble/index.html
@@ -369,11 +369,11 @@
         <div class="modalGrid">
             <div class="field">
                 <label for="name-player1">Player 1</label>
-                <input id="name-player1" type="text" value="Grzegorz"/>
+                <input id="name-player1" type="text" value="Player1"/>
             </div>
             <div class="field">
                 <label for="name-player2">Player 2</label>
-                <input id="name-player2" type="text" value="Paulina"/>
+                <input id="name-player2" type="text" value="Player2"/>
             </div>
         </div>
 
@@ -392,8 +392,8 @@
 
     const state = {
         players: {
-            player1: {name: "Grzegorz", total: 0},
-            player2: {name: "Paulina", total: 0}
+            player1: {name: "Player1", total: 0},
+            player2: {name: "Player2", total: 0}
         },
         turns: [],
         namesLocked: false
