--- a/scrabble/index.html
+++ b/scrabble/index.html
@@ -195,11 +195,11 @@
         <div class="modalGrid">
             <div class="field">
                 <label for="name-player1">Player 1</label>
-                <input id="name-player1" type="text" value="Grzegorz" />
+                <input id="name-player1" type="text" value="" />
             </div>
             <div class="field">
                 <label for="name-player2">Player 2</label>
-                <input id="name-player2" type="text" value="Paulina" />
+                <input id="name-player2" type="text" value="" />
             </div>
 
             <div class="field">
@@ -235,8 +235,8 @@
 
     const state = {
         players: {
-            player1: { name: "Grzegorz", total: 0, enabled: true },
-            player2: { name: "Paulina", total: 0, enabled: true },
+            player1: { name: "", total: 0, enabled: true },
+            player2: { name: "", total: 0, enabled: true },
             player3: { name: "", total: 0, enabled: false },
             player4: { name: "", total: 0, enabled: false }
         },
